tests/baselines/reference/allowSyntheticDefaultImports3.errors.txt
tests/cases/compiler/a.ts(1,8): error TS1192: Module '"tests/cases/compiler/b"' has no default export.


==== tests/cases/compiler/a.ts (1 errors) ====
    import Namespace from "./b";
           ~~~~~~~~~
!!! error TS1192: Module '"tests/cases/compiler/b"' has no default export.
    export var x = new Namespace.Foo();
    
==== tests/cases/compiler/b.ts (0 errors) ====
    export class Foo {
    	member: string;
    }
    